--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,9 @@
 
 </head>
 <body>
-  <h1>Hello World</h1>
+  <div id="React"></div>
   <script src='./Notif.js'></script>
+  <script src='./Rapp/RApp.js'></script>
 
 </body>
 </html>
