un petit no script

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
 </head>
 <body>
+  <noscript> Yo sois tu a désactiver Javascript sois tu a une connection en carton dans le premier cas active le dans le second.... bas attend</noscript>
   <div id="React"></div>
   <script src='./Notif.js'></script>
   <script src='./Rapp/RApp.js'></script>
