Application des patch rencontrer aux cours du portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,16 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Empty HTML</title>
-  <meta name="description" content="Empty html">
-  <meta name="author" content="Batleforc">
+  <title>Make PWA</title>
+  <meta property=”og:title content=”Maxime Leriche” />
+  <meta name="description" content="Make PWA">
+  <meta property=”og:description” content="Make PWA" />
+  <meta property=”og:type” content=”site” />
+  <meta property=”og:site_name” content="Make PWA" />
+  <meta property=”og:local” content="FR" />
+  <meta property=”og:image” content="" />
+  <meta property=”og:url” content=”” />
+  <meta name="author" content="Maxime">
 
   <link rel="manifest" href="manifest.json">
 
